Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -97,21 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks = None"
+    "number_of_weeks = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "number_of_weeks # 3"
